<resources>
    <string name="app_name">MyWardrobe</string>
    <string name="slogan">You\'re beautiful anyway</string>
    <string name="slogan2">Your digital wardrobe</string>
    <string name="reg">Registration</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="log_out">Log out</string>
    <string name="first_name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="change_password">Change password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="gender">Choose your gender:</string>
    <string name="gender_">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_birthday">Choose your birthday</string>
    <string name="choose_number">Choose your number</string>
    <string name="email_verif">Email not verified!</string>
    <string name="resend_email">Resend verification</string>
    <string name="phone_verif">Phone verification</string>
    <string name="phone_verif_sent">Please type verification code sent\nto </string>
    <string name="invalid_code">Invalid verification code!</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend code</string>
    <string name="forget_text">Enter your account`s email address below to reset password</string>
    <string name="choose">Choose</string>
    <string name="confirm">Confirm</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone number</string>
    <string name="already_registered">Already registered? Sign in</string>
    <string name="dont_have_account">Don`t have an account? Register</string>
    <string name="remember">Remember Me</string>
    <string name="choose_reset">Choose reset password option:</string>
    <string name="via_sms">Using sms code</string>
    <string name="via_email">Using email</string>
    <string name="forget">Forget password?</string>
    <string name="forget_">Forget password</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_gender">Choose your gender!</string>
    <string name="city">City name</string>
    <string name="time">Time</string>
    <string name="condition">Condition</string>
    <string name="temperature">17</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="item_name">Item Name</string>
    <string name="suggested_clothes">Suggested clothes</string>
    <string name="fashion">Men\'s fashion news</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="closet">Closet</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="headdress">Headdress</string>
    <string name="outwear">Outwear</string>
    <string name="tops">Tops</string>
    <string name="bottoms">Bottoms</string>
    <string name="pants">Pants</string>
    <string name="shorts">Shorts</string>
    <string name="skirts">Skirts</string>
    <string name="shoes">Shoes</string>
    <string name="settings">Settings</string>
    <string name="accessories">Accessories</string>
    <string name="looks">Looks</string>
    <string name="camera">Camera</string>
    <string name="add_clothe">Add cloth</string>
    <string name="gallery">Gallery</string>
    <string name="show_all">Show all</string>
    <string name="filters">Filters</string>
    <string name="color">Color</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="season">Season</string>
    <string name="close_title">Title</string>
    <string name="close_title_">Title:</string>
    <string name="description">Description</string>
    <string name="description_">Description:</string>
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="shirt">Shirt</string>
    <string name="t_shirt">T-shirt</string>
    <string name="sweater">Sweater</string>
    <string name="jacket">Jacket</string>
    <string name="jeans">Jeans</string>
    <string name="sneakers">Sneakers</string>
    <string name="dressed_shoes">Dressed shoes</string>
    <string name="boots">Boots</string>
    <string name="winter">Winter</string>
    <string name="summer">Summer</string>
    <string name="spring">Spring</string>
    <string name="autumn">Autumn</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="enter_description">Write a description...</string>
    <string name="step_one">Step 1: Add look photo, it`s title and description.</string>
    <string name="step_two">Step 2: Add look items.</string>
    <string name="add_image">Add image!</string>
    <string name="add_look_item">Add new item to your look:</string>
    <string name="internetConnection">Check internet connection!</string>
    <string name="try_again">Try again</string>
    <string name="send">Send</string>
    <string name="enter_old">Enter old password</string>
    <string name="enter_new">Enter new password</string>
    <string name="repeat_new">Repeat new password</string>
    <string name="change">Change</string>
    <string name="news_api_key">d35e39b91a9d434f863608b44ddb4754</string>

    <string-array name="types">
        <item>Shirt</item>
        <item>T-shirt</item>
        <item>Sweater</item>
        <item>Hoodie</item>
        <item>Jacket</item>
        <item>Jeans</item>
        <item>Sneakers</item>
        <item>Dressed shoes</item>
        <item>Boots</item>
    </string-array>

    <string-array name="sizes">
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>Xl</item>
        <item>XXL</item>
    </string-array>

    <string-array name="seasons">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>