<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".Forget_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/forget_"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_text"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/peach_grey"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxStrokeColor="@color/wood_brown"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/email"
            android:textColorHint="@color/black_trans"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:background="@color/wood_brown_trans"
                android:textColor="@color/black"
                android:inputType="textEmailAddress">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/next_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/wood_brown"
                android:fontFamily="@font/montserrat"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/back_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/back"
                android:drawableTint="@color/black"
                android:fontFamily="@font/montserrat"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>