<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:layout_margin="5dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corners_weather"
        android:orientation="vertical">

        <TextView
            android:id="@+id/weather_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/wood_brown"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/weather_temperature"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:text="@string/temperature"
            android:textColor="@color/wood_brown"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/weather_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/condition"
            android:textAlignment="center"
            android:textColor="@color/wood_brown"/>

        
    </LinearLayout>


</androidx.cardview.widget.CardView>