<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".Phone_verification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_verif"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/verification_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/peach_grey"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            />


        <com.chaos.view.PinView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            android:focusableInTouchMode="true"
            android:itemBackground="@color/wood_brown_trans"
            app:lineColor="@color/wood_brown"
            app:lineWidth="2dp"
            app:hideLineWhenFilled="true"
            android:inputType="number"
            android:cursorVisible="true"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:id="@+id/verification_code_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_code"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/red"
            android:visibility="invisible"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="18dp"
                app:backgroundTint="@color/wood_brown" />

            <Button
                android:id="@+id/back_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@null"
                android:drawableLeft="@drawable/back"
                android:drawableTint="@color/black"
                android:fontFamily="@font/montserrat"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="13dp" />

            <Button
                android:id="@+id/resend_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:drawableTint="@color/black"
                android:fontFamily="@font/montserrat"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@null"
                android:text="@string/resend"
                android:textColor="@color/black"
                android:textSize="13dp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>