<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    android:orientation="vertical"
    tools:context=".AddLookItems">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_add_look_items"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round_background"
            android:clickable="true"
            android:src="@drawable/back" />

        <Button
            android:id="@+id/add_looks_item_bttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/wood_brown"
            android:textSize="15dp"
            android:visibility="visible"
            app:backgroundTint="@color/white" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="25dp"
        android:orientation="vertical"
        android:background="@drawable/round_corners">

        <TextView
            android:id="@+id/step_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/wood_brown_trans_bttn"
            android:text="@string/step_two"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_horizontal"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/look_items_recycler"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="20dp"
                   android:layout_marginRight="10dp"
                   android:layout_marginLeft="10dp">

               </androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:id="@+id/save_look_bttn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:backgroundTint="@color/wood_brown"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"/>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>